init Total functions, fix Login,Register,Routes,Realtime-Data

--- a/app/app.component.css
+++ b/app/app.component.css
@@ -19,3 +19,12 @@
 .transform-caret-left {
   rotate: 90deg;
 }
+.app-header .app-header__content {
+  flex-direction: row-reverse;
+}
+.scrollbar-sidebar a {
+  color: #000 !important;
+}
+.scrollbar-sidebar a:hover {
+  cursor: pointer;
+}
