--- a/app/RFQ/RFQ.component.css
+++ b/app/RFQ/RFQ.component.css
@@ -1,3 +1,14 @@
 .hiddenRow {
     padding: 0 !important;
 }
+.accordion-toggle {
+  position: relative;
+}
+#disable-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+}
